ingress.yml
aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 528565572322.dkr.ecr.us-east-2.amazonaws.com

docker build -t 528565572322.dkr.ecr.us-east-2.amazonaws.com/ci-flask:latest .

docker push 528565572322.dkr.ecr.us-east-2.amazonaws.com/ci-flask:latest .


apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: flask.srinandhan.xyz     
    http:
      paths:
      - path: /
        backend:
          serviceName: flask
          servicePort: https
  tls:
  - hosts:
      - flask.srinandhan.xyz 
    secretName: flask-secret
